se agrega descripción de ejercicio Lista de Compras en el Readme

--- a/Clase-3-ejercicios/ej_lista_de_compras.ipynb
+++ b/Clase-3-ejercicios/ej_lista_de_compras.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "id": "c2891544",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Ejercicio: Programa interactivo Lista de Compras\n",
+    "\n",
+    "Este programa registra 3 productos (nombre y precio), calcula el total y determina el producto más caro."
+   ]
   },
   {
    "cell_type": "markdown",
